php5.3.10 init commit

--- a/configs/php/php.ini
+++ b/configs/php/php.ini
@@ -62,7 +62,7 @@ memory_limit = 512M
 ; Development Value: E_ALL
 ; Production Value: E_ALL & ~E_DEPRECATED & ~E_STRICT
 ; http://php.net/error-reporting
-error_reporting = E_ERROR
+error_reporting = E_ALL
 
 ; This directive controls whether or not and where PHP will output errors,
 ; notices and warnings too. Error output is very useful during development, but
@@ -79,7 +79,7 @@ error_reporting = E_ERROR
 ; Development Value: On
 ; Production Value: Off
 ; http://php.net/display-errors
-display_errors = on
+display_errors = On
 
 ; The display of errors which occur during PHP's startup sequence are handled
 ; separately from display_errors. PHP's default behavior is to suppress those
@@ -159,7 +159,7 @@ mysqli.default_user = root
 mysqli.default_pw = root
 
 
-zend_extension="/usr/lib/php/20151012/xdebug.so"
+zend_extension="/usr/lib/php5/20121212/xdebug.so"
 xdebug.remote_enable=1
 xdebug.remote_handler=dbgp 
 xdebug.remote_mode=req
